# ray-tracer-challenge

./: .gitignore  Cargo.toml  README.md  README.org  flake.nix  go.mod  go.sum  shell.nix  sonar-project.properties
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  labeler.yml
math/: utils.go
math/number/: interval.go
math/tuple/: color.go  point.go  tuple.go  tuple_test.go  vector.go
math/tuple/features/: colors.feature  points.feature  vectors.feature
src/: lib.rs  main.rs  math.rs  world.rs
src/math/: geometry.rs  matrix.rs  point.rs  vector.rs
src/math/geometry/: plane.rs  sphere.rs
src/world/: camera.rs  canvas.rs  color.rs  intersection.rs  light.rs  material.rs  pattern.rs  ray.rs  texture.rs
src/world/light/: point.rs
src/world/pattern/: gradient.rs  grid.rs  ring.rs  solid.rs  stripe.rs
world/canvas/: canvas.go  canvas_test.go  option.go
world/canvas/features/: canvases.feature
world/canvas/properties/: drawable.go
