[package]
name = "ray_tracer_challenge"
version = "0.1.0"
authors = ["Wesley Nelson <wgn@wesnel.dev>"]
edition = "2018"
description = "implementing the ray tracer challenge in rust"
readme = "README.md"
repository = "https://git.sr.ht/~wgn/ray-tracer-challenge"
license-file = "LICENSE.txt"

[dependencies]
rand = "0.7.3"
